
    <resources>
        <string name="accept">Accept</string>
        <string name="change_theme">Change theme</string>
        <string name="error_message">Invalid App ID</string>
        <string name="app_name">WeatherApplication</string>
        <string name="view_weather">View Weather</string>
        <string name="degree_celsius_symbol" translatable="false">°C</string>
        <string name="description_weather_condition_icon" translatable="false">weather condition icon</string>
        <string name="label_humidity">Humidity</string>
        <string name="label_pressure">Pressure</string>
        <string name="label_visibility">Visibility</string>
        <string name="label_sunrise">Sunrise</string>
        <string name="label_sunset">Sunset</string>
    </resources>
