<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context="com.weatherapplication.ui.WeatherFragment"
    style="@style/Base.Widget.AppCompat.ConstraintLayout1">



    <ProgressBar
        android:id="@+id/weatherProgressBar"
        style="@style/Base.Widget.AppCompat.ProgressBar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:visibility="visible" />


    <TextView
        android:id="@+id/tv_error_message"
        style="@style/Base.Widget.AppCompat.TextView1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:text="@string/error_message"
        tools:visibility="visible" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/weatherSunsetSunrise"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        style="@style/Base.Widget.AppCompat.ConstraintLayout2"
        app:layout_constraintBottom_toBottomOf="parent"
        android:orientation="vertical">


        <com.google.android.material.button.MaterialButton
            android:id="@+id/settingsButton"
            style="@style/Widget.MaterialComponents.Button.MyButtonStyle"
            android:layout_width="50dp"
            android:layout_height="60dp"
            android:drawableTop="@drawable/weather_fragment_settings"
            android:paddingTop="14dp"
            app:iconTint="@color/white"
            app:layout_constraintLeft_toRightOf="@id/iv_sunrise"
            app:layout_constraintRight_toLeftOf="@id/iv_sunset"
            app:layout_constraintBottom_toBottomOf="parent"
            android:layout_margin="40dp"
             />

        <TextView
            android:id="@+id/tv_sunrise_label"
            style="@style/Base.Widget.AppCompat.TextView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/label_sunrise"
            app:layout_constraintEnd_toEndOf="@id/iv_sunrise"
            app:layout_constraintStart_toStartOf="@id/iv_sunrise"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:id="@+id/iv_sunrise"
            android:layout_width="90dp"
            android:layout_height="90dp"
            android:layout_marginStart="40dp"
            android:src="@drawable/ic_sunrise"
            app:layout_constraintEnd_toStartOf="@id/iv_sunset"
            app:layout_constraintHorizontal_chainStyle="spread_inside"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_sunrise_label" />

        <TextView
            android:id="@+id/tv_sunrise_time"
            style="@style/Base.Widget.AppCompat.TextView3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:textSize="16sp"
            app:layout_constraintEnd_toEndOf="@id/iv_sunrise"
            app:layout_constraintStart_toStartOf="@id/iv_sunrise"
            app:layout_constraintTop_toBottomOf="@+id/iv_sunrise"
            tools:text="5:11 AM" />

        <TextView
            android:id="@+id/tv_sunset_label"
            style="@style/Base.Widget.AppCompat.TextView4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/label_sunset"
            app:layout_constraintEnd_toEndOf="@id/iv_sunset"
            app:layout_constraintStart_toStartOf="@id/iv_sunset"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:id="@+id/iv_sunset"
            android:layout_width="90dp"
            android:layout_height="90dp"
            android:layout_marginEnd="40dp"
            android:src="@drawable/ic_sunset"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/iv_sunrise"
            app:layout_constraintTop_toBottomOf="@+id/tv_sunset_label" />

        <TextView
            android:id="@+id/tv_sunset_time"
            style="@style/Base.Widget.AppCompat.TextView5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:textSize="16sp"
            app:layout_constraintEnd_toEndOf="@id/iv_sunset"
            app:layout_constraintStart_toStartOf="@id/iv_sunset"
            app:layout_constraintTop_toBottomOf="@+id/iv_sunset"
            tools:text="6:47 PM" />


    </androidx.constraintlayout.widget.ConstraintLayout>


    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/weatherAdditional"
        android:layout_width="match_parent"
        style="@style/Base.Widget.AppCompat.ConstraintLayout3"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/weatherBasic"
        >

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline_value_start"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_end="296dp" />

        <TextView
            android:id="@+id/tv_humidity_label"
            style="@style/Base.Widget.AppCompat.TextView6"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/label_humidity"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/tv_humidity_value"
            style="@style/Base.Widget.AppCompat.TextView7"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toEndOf="@id/guideline_value_start"
            app:layout_constraintTop_toTopOf="@+id/tv_humidity_label"
            tools:text="70%" />

        <TextView
            android:id="@+id/tv_pressure_label"
            style="@style/Base.Widget.AppCompat.TextView8"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:text="@string/label_pressure"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_humidity_label" />

        <TextView
            android:id="@+id/tv_pressure_value"
            style="@style/Base.Widget.AppCompat.TextView9"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="@id/guideline_value_start"
            app:layout_constraintTop_toTopOf="@+id/tv_pressure_label"
            tools:text="1001 mBar" />

        <TextView
            android:id="@+id/tv_visibility_label"
            style="@style/Base.Widget.AppCompat.TextView10"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:text="@string/label_visibility"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_pressure_label" />

        <TextView
            android:id="@+id/tv_visibility_value"
            style="@style/Base.Widget.AppCompat.TextView11"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="@id/guideline_value_start"
            app:layout_constraintTop_toTopOf="@id/tv_visibility_label"
            tools:text="4 km" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/weatherBasic"
        style="@style/Base.Widget.AppCompat.ConstraintLayout3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">


        <TextView
            android:id="@+id/tv_date_time"
            style="@style/Base.Widget.AppCompat.TextView12"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="15sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:text="18 June, 2019 1:13 PM" />

        <TextView
            android:id="@+id/tv_temperature"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/colorPrimary"
            android:textSize="60sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_date_time"
            tools:text="33" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/degree_celsius_symbol"
            android:textColor="@color/colorPrimary"
            android:textSize="35sp"
            app:layout_constraintStart_toEndOf="@id/tv_temperature"
            app:layout_constraintTop_toTopOf="@id/tv_temperature" />

        <TextView
            android:id="@+id/tv_city_country"
            android:layout_width="130dp"
            android:layout_height="45dp"
            android:textColor="@color/colorPrimary"
            android:textSize="18sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_temperature"
            tools:text="Dhaka, BD" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_percent=".7" />

        <ImageView
            android:id="@+id/iv_weather_condition"
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:contentDescription="@string/description_weather_condition_icon"
            android:scaleType="centerCrop"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="@id/guideline"
            app:layout_constraintTop_toTopOf="@id/tv_temperature"
            tools:src="@drawable/haze" />

        <TextView
            android:id="@+id/tv_weather_condition"
            style="@style/Base.Widget.AppCompat.TextView13"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:gravity="center"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="@id/guideline"
            app:layout_constraintTop_toBottomOf="@id/iv_weather_condition"
            tools:text="broken cloud" />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.Group
        android:id="@+id/output_group"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="gone"
        app:constraint_referenced_ids="weatherBasic, weatherAdditional, weatherSunsetSunrise"
        tools:visibility="visible" />

</androidx.constraintlayout.widget.ConstraintLayout>